# hvppyassistant

./: README.md  setup.cfg
assets/: resource.qrc
src/hvppyassistant/: app.py  clipboardwatcher.py  dictionaryplugin.py  messagemanager.py  resource_rc.py  start.py  trayiconmanager.py
