[metadata]
name = hvppyassistant
version = 0.0.1
description = Tools for efficiency
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    PySide6
    requests

[options.packages.find]
where = src

[options.entry_points]
gui_scripts = 
    hvppyassistant = hvppyassistant.start:main